remove unneccessary scrollbars and fix segment scrolling

--- a/frontend/stylesheets/_utils.less
+++ b/frontend/stylesheets/_utils.less
@@ -160,7 +160,7 @@ td.nowrap * {
   height: 100%;
 
   .child-1 {
-    overflow-y: auto;
+    overflow-y: hidden;
     flex-grow: 1;
   }
 
